@@ -26,6 +26,7 @@ import java.util.List;
 
 import org.universAAL.context.che.Hub.Log;
 import org.universAAL.context.che.database.Backend;
+import org.universAAL.context.che.ontology.ContextEvent;
 import org.universAAL.middleware.container.ModuleContext;
 import org.universAAL.middleware.context.owl.ContextProvider;
 import org.universAAL.middleware.service.CallStatus;
@@ -33,115 +34,106 @@ import org.universAAL.middleware.service.ServiceCall;
 import org.universAAL.middleware.service.ServiceCallee;
 import org.universAAL.middleware.service.ServiceResponse;
 import org.universAAL.middleware.service.owls.process.ProcessOutput;
-import org.universAAL.ontology.che.ContextEvent;
 
 /**
  * The CHe service callee receives all service calls issued to the CHe through
- * the service bus.
+ * the service bus
  * 
  * @author <a href="mailto:alfiva@itaca.upv.es">Alvaro Fides Valero</a>
  * 
  */
 public class ContextHistoryCallee extends ServiceCallee {
-    private static final ServiceResponse FAILURE = new ServiceResponse(
+    private static final ServiceResponse invalidInput = new ServiceResponse(
 	    CallStatus.serviceSpecificFailure);
-    /**
-     * Logger.
-     */
-    private static Log log = Hub.getLog(ContextHistoryCallee.class);
+    private final static Log log = Hub.getLog(ContextHistoryCallee.class);
 
-    /**
-     * The DB of the store.
-     */
-    private Backend db;
-
-    /**
-     * Main constructor.
-     * 
-     * @param context
-     *            The uaal module context
-     * @param dbstore
-     *            The store
-     */
-    ContextHistoryCallee(ModuleContext context, Backend dbstore) {
-	super(context, ContextHistoryServices.PROFILES);
-	this.db = dbstore;
+    static {
+	invalidInput.addOutput(new ProcessOutput(
+		ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR, "Invalid input!"));
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see
-     * org.universAAL.middleware.service.ServiceCallee#communicationChannelBroken
-     * ()
-     */
+    private Backend db;
+
+    ContextHistoryCallee(ModuleContext context, Backend db) {
+	super(context, ContextHistoryServices.profiles);
+	this.db = db;
+    }
+
     public void communicationChannelBroken() {
 	// TODO Auto-generated method stub
 
     }
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see
-     * org.universAAL.middleware.service.ServiceCallee#handleCall(org.universAAL
-     * .middleware.service.ServiceCall)
-     */
     public ServiceResponse handleCall(ServiceCall call) {
 	log.info("handleCall", "CHe received a service call");
 	if (call == null) {
-	    FAILURE.addOutput(new ProcessOutput(
-		    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR, "Corrupt call"));
-	    return FAILURE;
+	    invalidInput
+		    .addOutput(new ProcessOutput(
+			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
+			    "Corrupt call"));
+	    return invalidInput;
 	}
+
 	String operation = call.getProcessURI();
 	if (operation == null) {
-	    FAILURE.addOutput(new ProcessOutput(
-		    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR, "Corrupt call"));
-	    return FAILURE;
+	    invalidInput
+		    .addOutput(new ProcessOutput(
+			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
+			    "Corrupt call"));
+	    return invalidInput;
 	}
+
 	if (operation
 		.startsWith(ContextHistoryServices.SERVICE_DO_SPARQL_QUERY)) {
 	    log.info("handleCall", "Received call was SERVICE_DO_SPARQL_QUERY");
+
 	    Object input = call
 		    .getInputValue(ContextHistoryServices.INPUT_QUERY);
 	    if (input == null) {
-		FAILURE.addOutput(new ProcessOutput(
+		invalidInput.addOutput(new ProcessOutput(
 			ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			"Invalid input"));
-		return FAILURE;
+		return invalidInput;
 	    }
 	    return execSPARQLQuery((String) input);
+
 	} else if (operation
 		.startsWith(ContextHistoryServices.SERVICE_GET_EVENTS_BY_SPARQL)) {
 	    log.info("handleCall",
 		    "Received call was SERVICE_GET_EVENTS_BY_SPARQL");
+
 	    Object input = call
 		    .getInputValue(ContextHistoryServices.INPUT_QUERY);
 	    if (input == null) {
-		FAILURE.addOutput(new ProcessOutput(
+		invalidInput.addOutput(new ProcessOutput(
 			ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			"Invalid input"));
-		return FAILURE;
+		return invalidInput;
 	    }
+
 	    return execSPARQLQueryForEvents((String) input);
+
 	} else {
+
 	    Object input = call
 		    .getInputValue(ContextHistoryServices.INPUT_EVENT);
 	    ContextEvent inputevent;
+
 	    if ((input == null) || (!(input instanceof ContextEvent))) {
-		FAILURE.addOutput(new ProcessOutput(
+		invalidInput.addOutput(new ProcessOutput(
 			ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			"Invalid input (ContextEvent)"));
-		return FAILURE;
+		return invalidInput;
 	    } else {
 		inputevent = (ContextEvent) input;
 	    }
+
 	    String sub, typ, pre;
 	    Object obj;
 	    Integer con;
 	    Long exp, tst;
 	    ContextProvider cop;
+
 	    sub = (inputevent.getSubjectURI() != null && !inputevent
 		    .getRDFSubject().isAnon()) ? inputevent.getSubjectURI()
 		    : null;
@@ -159,18 +151,20 @@ public class ContextHistoryCallee extends ServiceCallee {
 		    .getTimestamp() : null;
 	    cop = (inputevent.getProvider() != null) ? inputevent.getProvider()
 		    : null;
+
 	    if (operation
 		    .startsWith(ContextHistoryServices.SERVICE_GET_EVENTS_FROM_TIMESTAMP)) {
 		log.info("handleCall",
 			"Received call was SERVICE_GET_EVENTS_FROM_TIMESTAMP");
+
 		Object tstinput = call
 			.getInputValue(ContextHistoryServices.INPUT_TIMESTAMP_FROM);
-		Long tstinputValue = Long.valueOf("0");
+		Long tstinputValue = new Long("0");
 		if ((tstinput == null) || (!(tstinput instanceof Long))) {
-		    FAILURE.addOutput(new ProcessOutput(
+		    invalidInput.addOutput(new ProcessOutput(
 			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			    "Invalid input (Timestamp)"));
-		    return FAILURE;
+		    return invalidInput;
 		} else {
 		    tstinputValue = (Long) tstinput;
 		}
@@ -181,18 +175,20 @@ public class ContextHistoryCallee extends ServiceCallee {
 		response.addOutput(new ProcessOutput(
 			ContextHistoryServices.OUTPUT_EVENTS, results));
 		return response;
-	    } else if (operation
+	    }
+
+	    else if (operation
 		    .startsWith(ContextHistoryServices.SERVICE_GET_EVENTS_TO_TIMESTAMP)) {
 		log.info("handleCall",
 			"Received call was SERVICE_GET_EVENTS_TO_TIMESTAMP");
 		Object tstinput = call
 			.getInputValue(ContextHistoryServices.INPUT_TIMESTAMP_TO);
-		Long tstinputValue = Long.valueOf("0");
+		Long tstinputValue = new Long("0");
 		if ((tstinput == null) || (!(tstinput instanceof Long))) {
-		    FAILURE.addOutput(new ProcessOutput(
+		    invalidInput.addOutput(new ProcessOutput(
 			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			    "Invalid input (Timestamp)"));
-		    return FAILURE;
+		    return invalidInput;
 		} else {
 		    tstinputValue = (Long) tstinput;
 		}
@@ -203,7 +199,9 @@ public class ContextHistoryCallee extends ServiceCallee {
 		response.addOutput(new ProcessOutput(
 			ContextHistoryServices.OUTPUT_EVENTS, results));
 		return response;
-	    } else if (operation
+	    }
+
+	    else if (operation
 		    .startsWith(ContextHistoryServices.SERVICE_GET_EVENTS_BETWEEN_TIMESTAMPS)) {
 		log.info("handleCall",
 			"Received call was SERVICE_GET_EVENTS_BETWEEN_TIMESTAMPS");
@@ -211,21 +209,21 @@ public class ContextHistoryCallee extends ServiceCallee {
 			.getInputValue(ContextHistoryServices.INPUT_TIMESTAMP_FROM);
 		Object tstinput2 = call
 			.getInputValue(ContextHistoryServices.INPUT_TIMESTAMP_TO);
-		Long tstinput1Value = Long.valueOf("0");
+		Long tstinput1Value = new Long("0");
 		if ((tstinput1 == null) || (!(tstinput1 instanceof Long))) {
-		    FAILURE.addOutput(new ProcessOutput(
+		    invalidInput.addOutput(new ProcessOutput(
 			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			    "Invalid input (Timestamp)"));
-		    return FAILURE;
+		    return invalidInput;
 		} else {
 		    tstinput1Value = (Long) tstinput1;
 		}
-		Long tstinput2Value = Long.valueOf("0");
+		Long tstinput2Value = new Long("0");
 		if ((tstinput2 == null) || (!(tstinput2 instanceof Long))) {
-		    FAILURE.addOutput(new ProcessOutput(
+		    invalidInput.addOutput(new ProcessOutput(
 			    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
 			    "Invalid input (Timestamp)"));
-		    return FAILURE;
+		    return invalidInput;
 		} else {
 		    tstinput2Value = (Long) tstinput2;
 		}
@@ -238,30 +236,16 @@ public class ContextHistoryCallee extends ServiceCallee {
 			ContextHistoryServices.OUTPUT_EVENTS, results));
 		return response;
 	    }
+
 	}
-	FAILURE.addOutput(new ProcessOutput(
+	invalidInput.addOutput(new ProcessOutput(
 		ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR, "Invalid call"));
-	return FAILURE;
+	return invalidInput;
     }
 
-    /**
-     * Perform SPARQL query.
-     * 
-     * @param input
-     *            The query
-     * @return Response
-     */
     private ServiceResponse execSPARQLQuery(String input) {
 	try {
 	    String results = db.queryBySPARQL(input);
-	    if (results == null) {
-		log.error("execSPARQLQuery",
-			"Error executing specific SPARQL: the backend returned null");
-		FAILURE.addOutput(new ProcessOutput(
-			ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
-			"Null response to SPARQL"));
-		return FAILURE;
-	    }
 	    ServiceResponse response = new ServiceResponse(CallStatus.succeeded);
 	    response.addOutput(new ProcessOutput(
 		    ContextHistoryServices.OUTPUT_RESULT, results));
@@ -269,42 +253,21 @@ public class ContextHistoryCallee extends ServiceCallee {
 	} catch (Exception e) {
 	    log.error("execSPARQLQuery",
 		    "Error executing specific SPARQL: {} ", e);
-	    FAILURE.addOutput(new ProcessOutput(
-		    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
-		    "Error executing specific SPARQL"));
-	    return FAILURE;
+	    return invalidInput;
 	}
     }
 
-    /**
-     * Perform SPARQL query.
-     * 
-     * @param input
-     *            The query
-     * @return Response with events
-     */
     private ServiceResponse execSPARQLQueryForEvents(String input) {
 	try {
 	    ServiceResponse response = new ServiceResponse(CallStatus.succeeded);
 	    ArrayList results = db.retrieveEventsBySPARQL(input);
-	    if (results == null) {
-		log.error("execSPARQLQueryForEvents",
-			"Error executing specific SPARQL for events: the backend returned null");
-		FAILURE.addOutput(new ProcessOutput(
-			ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
-			"Null response to SPARQL"));
-		return FAILURE;
-	    }
 	    response.addOutput(new ProcessOutput(
 		    ContextHistoryServices.OUTPUT_EVENTS, results));
 	    return response;
 	} catch (Exception e) {
 	    log.error("execSPARQLQueryForEvents",
 		    "Error executing SPARQL for events: {} ", e);
-	    FAILURE.addOutput(new ProcessOutput(
-		    ServiceResponse.PROP_SERVICE_SPECIFIC_ERROR,
-		    "Error executing specific SPARQL"));
-	    return FAILURE;
+	    return invalidInput;
 	}
     }
 
